// Jest Snapshot v1, https://goo.gl/fbAQLP

<<<<<<< HEAD
exports[`Form should render properly with some props assigned 1`] = `
<form
  className="form login-form"
>
  <div />
</form>
`;

exports[`Form should render with just required props passed 1`] = `
<form
  className="form"
>
  <div />
=======
exports[`Form should render with many props assigned 1`] = `
<form
  className="form login-form"
>
  <p>
    Test
  </p>
</form>
`;

exports[`Form should render with required props 1`] = `
<form
  className="form"
>
  <p>
    Test
  </p>
>>>>>>> 1e3818fe1ed61deeda96881e0e7a718d44c1dd4e
</form>
`;
